[package]
name = "librr_rs"
version = "0.1.0"
edition = "2021"
crate-type = "staticlib"

[dependencies]
autocxx = "0.22"
cxx = "1.0"
serial_test = "0.8.0"
rand = "0.8.5"
gag = "1.0.0"
custom_derive="0.1"
newtype_derive = "0.1"
object="0.29"
symbolic={version="9.1",features=["demangle"]}
symbolic-demangle={version="9.1", features=["rust", "cpp", "msvc"]}
symbolic-common={version="9.1"}
procmaps = {git = "https://github.com/zaporter/procmaps"}

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
bindgen = "0.59.2"
autocxx-build = "0.22.3"
miette = { version="4.3", features=["fancy"] } 
